--- a/personal-profile-page.html
+++ b/personal-profile-page.html
@@ -12,10 +12,10 @@
       </ul>
     </nav>
     <!-- Bio Section -->
-     <h1>My Profile</h1>
      <section>
+      <h1>My Profile</h1>
       <h3>Bio</h3>
-      <img src="placeholder.png" alt="image placeholder">
+      <img src="myself.jpg" alt="image placeholder">
       <p>My name is Daniel Adejoro, <br>
           I am a native of Ondo state in Nigeria and I am an aspiring Software Engineer, currently<br>
           studying with 3MTT in conjuction with Darey.io. It has been a great time studying and I am<br>
@@ -34,7 +34,8 @@
           </ul>
      </section>
      <footer>
-      Phone: +2348082625683, Email: danielkay62@gmail.com
+      Phone: +2348082625683, <br>
+      Email: danielkay62@gmail.com
      </footer>
   </body>
 </html>
